fixed gap between nav & form

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,3 +21,6 @@
     top: 0;
     width: 100%;
 }
+.gapFromNav{
+    margin-top: 65px;
+}
