--- a/public/css/assortment.css
+++ b/public/css/assortment.css
@@ -42,10 +42,13 @@ body {
 
 .product {
     float: left;
-    width: 20%;
+    width: 18%;
     padding: .75rem;
     margin-bottom: 2rem;
     border: 0;
+    margin-left: 1%;
+    margin-right: 1%;
+    background-color: #FFFFFF;
 }
 
 .card > img {
